--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
+  "name": "app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node app/app.js",
+    "test": "mocha --recursive"
+  },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "chai": "^5.2.0",
+    "chai-http": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-ejs-layouts": "^2.5.1",
+    "method-override": "^3.0.0",
+    "mocha": "^11.1.0",
     "pg": "^8.13.1",
     "pug": "^3.0.3",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "uuidv4": "^6.2.13"
   }
 }
